# FIITChain

./: .gitignore  Cargo.toml  LICENSE  README.md
blockchain/: Cargo.toml
blockchain/src/: block.rs  blockchain.rs  handler.rs  lib.rs  tx_pool.rs
blockchain/tests/: tests.rs
blockchain/tests/common/: mod.rs
consensus/: Cargo.toml  sim-result.txt
consensus/src/: lib.rs  node.rs  tx.rs
consensus/tests/: simulation.rs
docs/latex/: Makefile  bibliography.bib  conclusion.tex  doc.tex  listings-rust.sty  phase1.tex  phase2.tex  phase3.tex
fiitcoin/: Cargo.toml
fiitcoin/src/: handler.rs  main.rs  tx.rs  utxo.rs
fiitcoin/tests/: handler_test.rs  is_tx_valid_test.rs  max_fee_handler_test.rs
fiitcoin/tests/common/: mod.rs
keys/: alice_rsa_pk.pem  bob_rsa_pk.pem
multisig/: Cargo.toml
multisig/src/: block.rs  block_handler.rs  blockchain.rs  handler.rs  lib.rs  tx.rs  tx_pool.rs  utxo.rs
multisig/tests/: multisig.rs  multisig_blockchain.rs  multisig_tx.rs
multisig/tests/common/: mod.rs
