[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.9.6", features = ["sha2"]}
sha2 = "0.10.8"
fiitcoin = { path = "../fiitcoin" }
ringbuffer = "0.15.0"
env_logger = "0.11.3"
rand = "0.8.5"
log = "0.4.21"
