[package]
name = "multisig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
ringbuffer = "0.15.0"
rsa = { version = "0.9.6", features = ["sha2"]}
sha2 = "0.10.8"
